--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
+        darkMode: 'class',
         theme: {
           extend: {
             colors: {
@@ -19,7 +20,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="chat"></div>
+    <div id="chat" class="h-screen dark:bg-slate-900"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
